# ext-php-rs

./: .gitignore  .lefthook.yml  .release-plz.toml  .typos.toml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  allowed_bindings.rs  build.rs  context7.json  docsrs_bindings.rs  exceptions.html  flake.nix  index.html  ini-settings.html  introduction.html  mago.toml  output.html  print.html  searcher-c2a407aa.js  searchindex-4ecb5763.js  searchindex-5d8a3b18.js  searchindex-5db2da77.js  searchindex-625ae72e.js  searchindex-bb297726.js  searchindex-c38bfa4a.js  superglobals.html  toc-22bbee95.js  toc-4cb40497.js  toc-546d01eb.js  toc-89b70999.js  toc-fc22e4c1.js  toc.html  unix_build.rs  windows_build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_help.yml
.github/action/musl/: Dockerfile
.github/workflows/: build.yml  codspeed.yml  coverage.yml  docs.yml  docsrs_bindings.yml  macro_docs.yml  master_benchmarks.yml  pr_benchmarks_archive.yml  pr_benchmarks_run.yml  pr_benchmarks_upload.yml  release-plz.yml
advanced/: allowed_bindings.html  async_impl.html  bailout_guard.html  custom_sapi.html  embedded_php.html  module_globals.html  observer.html  worker_mode.html
benches/: .gitignore  Cargo.toml  function_call.rs
benches/.cargo/: config.toml
benches/benches/: array_interned_keys.php  array_str_ref_keys.php  binary_bench.rs  cached_callback_call.php  callback_call.php  function_call.php  method_call.php  property_dump.php  property_read.php  property_write.php  static_method_call.php
benches/codspeed/: embed_benchmarks.rs
benches/ext/: Cargo.toml
benches/ext/src/: lib.rs
benches/src/: lib.rs
crates/cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/hotload/: Cargo.toml
crates/hotload/src/: abi.rs  lib.rs  parser.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: class.rs  constant.rs  enum_.rs  extern_.rs  function.rs  impl_.rs  impl_interface.rs  interface.rs  lib.rs  module.rs  parsing.rs  php_clone.rs  php_union.rs  union.rs  zval.rs
crates/macros/tests/expand/: class.expanded.rs  enum.expanded.rs  interface.expanded.rs
crates/php-build/: CHANGELOG.md  Cargo.toml
crates/php-build/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: data_type.rs  lib.rs  php_type.rs
examples/: callable_channel.php  callable_channel.rs  hello_world.rs  observer.rs  zend_extension.rs
examples/hotload/: README.md  demo.php  demo_loaddir.php  plugin_hello.rs  plugin_json.rs  plugin_math.rs
getting-started/: cargo-php.html  hello_world.html  installation.html
guide/: book.toml
guide/src/: SUMMARY.md  output.md  superglobals.md
macros/: classes.html  constant.html  extern.html  function.html  impl.html  index.html  interface.html  module.html  php.html  zval_convert.html
migration-guides/: v0.14.html  v0.16.html
src/: args.rs  binary.rs  build.rs  class.rs  closure.rs  constant.rs  convert.rs  enum_.rs  error.rs  ffi.rs  flags.rs  lib.rs  macros.rs  php_eval.rs  props.rs  wrapper.c  wrapper.h
src/builders/: class.rs  enum_builder.rs  function.rs  ini.rs  mod.rs  module.rs  sapi.rs
src/describe/: abi.rs  mod.rs  stub.rs
src/embed/: context.rs  embed.h  ffi.rs  mod.rs  sapi_trait.rs  server_vars.rs  test-script.php  thread.rs  worker.c  worker.rs
src/internal/: class.rs  property.rs
src/types/: callable.rs  callable_channel.rs  class_object.rs  iterator.test.php  long.rs  mod.rs  object.rs  php_ref.rs  php_type.rs  php_union.rs  separated.rs  string.rs  zval.rs
src/zend/: _type.rs  bailout_guard.rs  ce.rs  class.rs  error_observer.rs  ex.rs  exception_observer.rs  expected_type.rs  function.rs  globals.rs  handlers.rs  mod.rs  module.rs  module_globals.rs  observer.rs  streams.rs  string.rs  try_catch.rs  zend_extension.rs
tests/: Cargo.toml  build.rs  cached_callable.rs  module.rs  raw_functions.rs  sapi.rs
tests/src/: lib.rs
tests/src/integration/: _utils.php  mod.rs
tests/src/integration/array/: array.php  mod.rs
tests/src/integration/bailout/: bailout_control.php  bailout_deep_nested.php  bailout_exit.php  bailout_guard.php  bailout_nested.php  mod.rs
tests/src/integration/binary/: binary.php  mod.rs
tests/src/integration/bool/: mod.rs
tests/src/integration/callable/: callable.php  mod.rs
tests/src/integration/class/: class.php  mod.rs  prop_string_leak.php
tests/src/integration/class_union/: class_union.php  mod.rs
tests/src/integration/closure/: closure.php
tests/src/integration/defaults/: defaults.php  mod.rs
tests/src/integration/dnf/: dnf.php  mod.rs
tests/src/integration/enum_/: enum.php
tests/src/integration/exception/: exception.php
tests/src/integration/globals/: globals.php
tests/src/integration/interface/: interface.php  mod.rs
tests/src/integration/intersection/: intersection.php  mod.rs
tests/src/integration/iterator/: iterator.php  mod.rs
tests/src/integration/magic_method/: magic_method.php
tests/src/integration/module_globals/: mod.rs  module_globals.php
tests/src/integration/number/: number.php
tests/src/integration/object/: object.php
tests/src/integration/observer/: error_observer.php  exception_observer.php  mod.rs  observer.php  zend_extension.php
tests/src/integration/persistent_string/: mod.rs  persistent_string.php
tests/src/integration/php_types_attr/: mod.rs  php_types_attr.php
tests/src/integration/php_union/: mod.rs  php_union.php
tests/src/integration/reference/: mod.rs  reference.php
tests/src/integration/separated/: mod.rs  separated.php
tests/src/integration/typed_property/: mod.rs  typed_property.php
tests/src/integration/types/: types.php
tests/src/integration/union/: mod.rs  union.php
tests/src/integration/variadic_args/: variadic_args.php
tools/: update_lib_docs.sh
types/: binary.html  binary_slice.html  bool.html  class_object.html  closure.html  functions.html  hashmap.html  index.html  numbers.html  object.html  option.html  str.html  string.html  vec.html  zend_hashtable.html  zval_ownership.html
(+41 files in other folders)
