[package]
name = "tests"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
ext-php-rs = { path = "../", default-features = false }

[build-dependencies]
ext-php-rs-build = { version = "0.1.1", path = "../crates/php-build" }

[features]
default = ["enum", "runtime", "closure"]
enum = ["ext-php-rs/enum"]
anyhow = ["ext-php-rs/anyhow"]
runtime = ["ext-php-rs/runtime"]
closure = ["ext-php-rs/closure"]
static = ["ext-php-rs/static"]
observer = ["ext-php-rs/observer"]

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(php82)', 'cfg(php84)'] }
