[package]
name = "ext-php-rs-derive"
description = "Derive macros for ext-php-rs."
repository = "https://github.com/extphprs/ext-php-rs"
homepage = "https://ext-php.rs"
license = "MIT OR Apache-2.0"
version = "0.11.14"
authors = [
    "Xenira <xenira@php.rs>",
    "David Cole <david.cole1340@gmail.com>",
    "Pierre Tondereau <pierre.tondereau@protonmail.com>",
]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits", "printing"] }
darling = "0.23"
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = "0.11.0"
itertools = "0.14.0"
ext-php-rs-types = { version = "=0.1.0", path = "../types", features = [
    "proc-macro",
] }

[lints.rust]
missing_docs = "warn"

[dev-dependencies]
glob = "0.3.2"
macrotest = "1.1.0"
runtime-macros = "1.1.1"
rustversion = "1"
